--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       -8080:8080
     environment:
-      - SPRING DATASOURCE_URL: jdbc:mysql://db:3306/project?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+      - "SPRING DATASOURCE_URL": "jdbc:mysql://db:3306/project?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false"
       - SPRING DATASOURCE_USERNAME: admin
       - SPRING DATASOURCE_PASSWORD: root
     depends_on:
@@ -15,7 +15,7 @@ services:
   mydb:
     image: mysql:8.0.27
     environment:
-      - DATABASE_HOST: docker-mysql
+      - "DATABASE_HOST": "docker-mysql"
       - DATABASE_PORT: 3306
       - MYSQL ROOT PASSWORD: root
       - MYSQL DATABASE: Localspringbootdb
