--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,22 @@ version: '3.8'
 
 services:
   app:
-    image: pranavgawas/vehicleconfigurationapp:1.0.0
+    image: pranavgawas/vehicleconfiguratorapp:1.0.0
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL: "jdbc:mysql://db:3306/project?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false"
-      - SPRING_DATASOURCE_USERNAME: admin
-      - SPRING_DATASOURCE_PASSWORD: root
+      - SPRING_DATASOURCE_URL="jdbc:mysql://db:3306/project?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false"
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=root
     depends_on:
       - mydb
 
   mydb:
     image: mysql:8.0.27
     environment:
-      - DATABASE_HOST: docker-mysql
-      - DATABASE_PORT: 3306
-      - MYSQL_ROOT_PASSWORD: root
-      - MYSQL_DATABASE: Localspringbootdb
-      - MYSQL_USER: admin
-      - MYSQL_PASSWORD: root
+      - DATABASE_HOST=docker-mysql
+      - DATABASE_PORT=3306
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=mydb
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=root
