--- a/application-docker.properties
+++ b/application-docker.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql:3306/project
+spring.datasource.url=jdbc:mysql://mydb:3306/project?createDatabaseIfNotExist=true
 spring.datasource.username=admin
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
