--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     build: .
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mydb:3306/project?createDatabaseIfNotExist=true
-      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
       - spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
       - spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -27,10 +27,9 @@ services:
   mydb:
     image: mysql
     environment:
-      - mysql_USERNAME=admin
       - MYSQL_ROOT_PASSWORD=root
-    volumes:
-      - ./data:var/lib/mysql
+    # volumes:
+    #   - ./workspaces/VehicleConfiguratorJavaDocker/data:var/lib/mysql
     ports:
       - 3306:3306
     networks:
