--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - myapp
 
   mydb:
-    image: mysql
+    image: pranavgawas/mysql:2.0.0
     environment:
       - MYSQL_ROOT_PASSWORD=root
     volumes:
